chore: update .gitignore and .pylintrc

--- a/.pylintrc
+++ b/.pylintrc
@@ -7,6 +7,7 @@ disable=C0114, # missing-module-docstring
         R0903, # too-few-public-methods
 	W0719, # broad-exception-raised
         C0415, # import-outside-toplevel
+        E1101, # no-member
 # Analyse import fallback blocks. This can be used to support both Python 2 and
 # 3 compatible code, which means that the block might have code that exists
 # only in one or another interpreter, leading to false positives when analysed.
